--- a/.travis.yml
+++ b/.travis.yml
@@ -5,30 +5,31 @@ node_js:
 services:
   - docker
 
-# before_script:
-#   - cd udagram-api-feed
-#   - npm i
-#   - npm i -D typescript@latest
-#   - npm run build
-#   - cd ../udagram-api-user
-#   - npm i
-#   - npm i -D typescript@latest
-#   - npm run build
-#   - cd ..
+before_script:
+  # - cd udagram-api-feed
+  # - npm i
+  # - npm i -D typescript@latest
+  # - npm run build
+  # - cd ../udagram-api-user
+  # - npm i
+  # - npm i -D typescript@latest
+  # - npm run build
+  # - cd ..
+  - export TAG_VERSION=v2
 
 script:
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-reverseproxy ./udagram-reverseproxy
   - docker build -t udagram-frontend ./udagram-frontend
-  - docker tag udagram-api-feed shehabnagy1998/udagram-api-feed:v1
-  - docker tag udagram-api-user shehabnagy1998/udagram-api-user:v1
-  - docker tag udagram-reverseproxy shehabnagy1998/udagram-reverseproxy:v1
-  - docker tag udagram-frontend shehabnagy1998/udagram-frontend:v1
+  - docker tag udagram-api-feed "$DOCKER_USERNAME"/udagram-api-feed:"$TAG_VERSION"
+  - docker tag udagram-api-user "$DOCKER_USERNAME"/udagram-api-user:"$TAG_VERSION"
+  - docker tag udagram-reverseproxy "$DOCKER_USERNAME"/udagram-reverseproxy:"$TAG_VERSION"
+  - docker tag udagram-frontend "$DOCKER_USERNAME"/udagram-frontend:"$TAG_VERSION"
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push shehabnagy1998/udagram-api-feed:v2
-  - docker push shehabnagy1998/udagram-api-user:v2
-  - docker push shehabnagy1998/udagram-reverseproxy:v2
-  - docker push shehabnagy1998/udagram-frontend:v2
+  - docker push "$DOCKER_USERNAME"/udagram-api-feed:"$TAG_VERSION"
+  - docker push "$DOCKER_USERNAME"/udagram-api-user:"$TAG_VERSION"
+  - docker push "$DOCKER_USERNAME"/udagram-reverseproxy:"$TAG_VERSION"
+  - docker push "$DOCKER_USERNAME"/udagram-frontend:"$TAG_VERSION"
